[SUREFIRE-795] Added support for balancing tests across threads
git-svn-id: https://svn.apache.org/repos/asf/maven/surefire/trunk@1205186 13f79535-47bb-0310-9956-ffa450edef68